--- a/style.css
+++ b/style.css
@@ -16,9 +16,22 @@ select {
     color: #010100;
     padding-left: 3rem;
 }
+input[type="text"], input[type="email"] {
+    font-size: 1.6rem;
+    color: #010100;
+    width: 200%;
+    line-height: 65px;
+    padding-left: 3rem;
+}
+.btn-secondary {
+    color: #fff;
+    background-color: #6c757d;
+    border-color: #6c757d;
+    margin: 20px;
+}
 #viz {
-                width: 900px;
-                height: 700px;
+                width: 100%;
+                height: 50%;
                 border: 1px solid lightgray;
                 font: 22pt arial;
     }
