--- a/style.css
+++ b/style.css
@@ -35,6 +35,12 @@ input[type="text"], input[type="email"] {
                 border: 1px solid lightgray;
                 font: 22pt arial;
     }
+    #myLogFile {
+        width: 100%;
+        height: 50%;
+        border: 1px solid lightgray;
+        font: 10pt arial;
+}
 .h1, h1 {
     font-size: 36px;
 }
